test/parser/cases/invalid/small/braced_initializer_expression.cp
main()
{
    let value = {1, 2};
}
